# ocr_platform

./: README.md
cpp/: CMakeLists.txt  README.md  build.sh
cpp/OcrDetect/: API.md  CMakeLists.txt  OcrDetect.cpp  OcrDetect.h
cpp/OcrDetect/config/: ocrdetect.conf
cpp/OcrDetect/include/ocrdetect/: ConfigLoader.hpp  OcrEngine.hpp  export.h  ocr_api.h
cpp/OcrDetect/src/: AngleNet.cpp  AngleNet.h  CrnnNet.cpp  CrnnNet.h  OcrLite.cpp  OcrLite.h  OcrLitePort.h  OcrUtils.cpp  ocr_api.cpp
cpp/common/: export.h  version.h
cpp/examples/: CMakeLists.txt  demo.cpp  demo_tm_ocr.cpp  test_ocr.cpp
cpp/server/: CMakeLists.txt  README.md  base64.cpp  base64.h  main.cpp  server_config.h
cpp/server/config/: server.conf
cpp/server/transport/: README.md
cpp/templatematch/: API.md  CMakeLists.txt  build.sh
cpp/templatematch/config/: templatematch.conf
cpp/templatematch/demo/: demo_tm.cpp
cpp/templatematch/include/templatematch/: ConfigLoader.hpp  Matcher.hpp  export.h  tm_api.h
cpp/templatematch/src/: matcher.cpp  matcher.h  template_matching.h  tm_api.cpp
cpp/templatematch/src/Pattern_Matching/: PatternMatching.cpp  PatternMatching.h
cpp/templatematch/src/base_matcher/: base_matcher.cpp  base_matcher.h
proto/: api.md
python/: README.md  example_ocr.py  example_rec_only.py  requirements.txt
python/onnxocr/: onnx_paddleocr.py  operators.py  utils.py
python/server/: README.md  __init__.py  dispatcher.py  engine_context.py  main.py  requirements.txt
python/server/config/: server.conf
python/server/transport/: __init__.py  base.py  http.py  mqtt.py  zeromq.py
